[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ESDI_transformations"
version = "0.0.1"
authors = [
  { name="Matthew McDermott", email="mattmcdermott8@gmail.com" },
]
description = "Sample transformations for ESDI data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["torch", "numpy", "pandas", "polars"]

[project.optional-dependencies]
dev = ["pre-commit"]
tests = ["pytest", "rootutils"]

[project.urls]
Homepage = "https://github.com/Event-Stream-Data-Standard/ESDI_transformations"
Issues = "https://github.com/Event-Stream-Data-Standard/ESDI_transformations/issues"
